added properties configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.jpa.defer-datasource-initialization=true
+translator.uri=https://translate.api.cloud.yandex.net/translate/v2/translate
+translator.apiKey=Api-Key AQVNx9UB8F04CLIMeCVlOFmX61JODPtchHUGtsPc
